fix volume bar clipping

--- a/index.less
+++ b/index.less
@@ -301,6 +301,7 @@
             .app-chrome-item.volume {
                 width       : 120px;
                 margin-right: 3rem;
+                margin-left : 2rem;
 
                 input[type="range"] {
                     background-color: transparent;
